--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "@opentelemetry/node": "^0.9.0",
+    "@opentelemetry/plugin-express": "^0.8.0",
+    "@opentelemetry/plugin-http": "^0.9.0",
+    "@opentelemetry/plugin-mongodb": "^0.8.0",
     "body-parser": "^1.18.3",
     "bunyan": "^1.8.12",
     "dd-trace": "^0.23",
